@@ -1,76 +1,84 @@
 package com.lithium.dbi.rdbi;
 
 import io.opentelemetry.api.trace.Tracer;
-import net.sf.cglib.proxy.Callback;
-import net.sf.cglib.proxy.CallbackFilter;
-import net.sf.cglib.proxy.Enhancer;
-import net.sf.cglib.proxy.Factory;
-import net.sf.cglib.proxy.MethodInterceptor;
+import net.bytebuddy.ByteBuddy;
+import net.bytebuddy.description.modifier.Visibility;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
+import net.bytebuddy.dynamic.scaffold.subclass.ConstructorStrategy;
+import net.bytebuddy.implementation.MethodDelegation;
+import net.bytebuddy.matcher.ElementMatchers;
 import redis.clients.jedis.Jedis;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 
 class ProxyFactory {
 
-    private static final MethodInterceptor NO_OP = new MethodNoOpInterceptor();
-    private static final CallbackFilter FINALIZE_FILTER = new FinalizeFilter();
+    final Map<Class<?>, Class<?>> cache = new ConcurrentHashMap<>();
+    final Map<Class<?>, Map<Method, MethodContext>> methodContextCache = new ConcurrentHashMap<>();
 
-    final ConcurrentMap<Class<?>, Factory> factoryCache;
-
-    final ConcurrentMap<Class<?>, Map<Method, MethodContext>> methodContextCache;
-
-    private final Factory jedisInterceptorFactory;
-
-    ProxyFactory() {
-        factoryCache = new ConcurrentHashMap<>();
-        methodContextCache =  new ConcurrentHashMap<>();
-        jedisInterceptorFactory = JedisWrapperMethodInterceptor.newFactory();
-    }
-
-    JedisWrapperDoNotUse attachJedis(final Jedis jedis, Tracer tracer) {
-        return JedisWrapperMethodInterceptor.newInstance(jedisInterceptorFactory, jedis, tracer);
+    Jedis attachJedis(final Jedis jedis, Tracer tracer) {
+        return JedisWrapperMethodInterceptor.newInstance(jedis, tracer);
     }
 
     @SuppressWarnings("unchecked")
     <T> T createInstance(final Jedis jedis, final Class<T> t) {
-
-        Factory factory;
-        if (factoryCache.containsKey(t)) {
-            return (T) factoryCache.get(t).newInstance(new Callback[]{NO_OP,new MethodContextInterceptor(jedis, methodContextCache.get(t))});
-        } else {
-
-            try {
-                buildMethodContext(t, jedis);
-            } catch (InstantiationException | IllegalAccessException e) {
-                throw new RuntimeException(e);
-            }
-
-            Enhancer e = new Enhancer();
-            e.setSuperclass(t);
-            e.setCallbacks(new Callback[]{NO_OP,NO_OP}); //this will be overriden anyway, we set 2 so that it valid for FINALIZE_FILTER
-            e.setCallbackFilter(FINALIZE_FILTER);
-
-            factory = (Factory) e.create();
-            factoryCache.putIfAbsent(t, factory);
-            return (T) factory.newInstance(new Callback[]{NO_OP, new MethodContextInterceptor(jedis, methodContextCache.get(t))});
+        try {
+            MethodContextInterceptor interceptor = new MethodContextInterceptor(jedis, getMethodMethodContextMap(t, jedis));
+            Object instance = get(t).getDeclaredConstructor().newInstance();
+            final Field field = instance.getClass().getDeclaredField("handler");
+            field.set(instance, interceptor);
+            return (T) instance;
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException |
+                 NoSuchFieldException e) {
+            throw new RuntimeException(e);
         }
     }
 
-    private <T> void buildMethodContext(Class<T> t, Jedis jedis) throws IllegalAccessException, InstantiationException {
+    boolean isCached(Class<?> t) {
+        return cache.get(t) != null;
+    }
 
-        if (methodContextCache.containsKey(t)) {
-            return;
+
+    private Class<?> get(Class<?> t) throws IllegalAccessException, InstantiationException {
+        Class<?> cached = cache.get(t);
+        if (cached != null) {
+            return cached;
+        } else {
+            Class<?> newClass = buildClass(t);
+            cache.putIfAbsent(t, newClass);
+            return cache.get(t);
+        }
+    }
+
+    private <T> Class<? extends T> buildClass(Class<T> t) throws IllegalAccessException, InstantiationException {
+
+
+        return new ByteBuddy()
+                .subclass(t, ConstructorStrategy.Default.DEFAULT_CONSTRUCTOR)
+                .defineField("handler", MethodContextInterceptor.class, Visibility.PUBLIC)
+                .method(ElementMatchers.any())
+                .intercept(MethodDelegation.toField("handler"))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
+                .getLoaded();
+
+    }
+
+    private <T> Map<Method, MethodContext> getMethodMethodContextMap(Class<T> t, Jedis jedis) throws InstantiationException, IllegalAccessException {
+        Map<Method, MethodContext> cached = methodContextCache.get(t);
+        if (cached != null) {
+            return cached;
         }
 
         Map<Method, MethodContext> contexts = new HashMap<>();
-
         for (Method method : t.getDeclaredMethods()) {
-
             Query query = method.getAnnotation(Query.class);
             String queryStr = query.value();
 
@@ -85,36 +93,28 @@ class ProxyFactory {
             }
 
             Mapper methodMapper = method.getAnnotation(Mapper.class);
-            ResultMapper mapper = null;
+            ResultMapper<?, ?> mapper = null;
             if (methodMapper != null) {
-                mapper = methodMapper.value().newInstance();
+                try {
+                    mapper = methodMapper.value().getDeclaredConstructor().newInstance();
+                } catch (InvocationTargetException | NoSuchMethodException e) {
+                    throw new RuntimeException(e);
+                }
             }
-
             contexts.put(method, new MethodContext(sha1, mapper, luaContext));
         }
-
-        methodContextCache.putIfAbsent(t, contexts);
+        methodContextCache.putIfAbsent(t, Collections.unmodifiableMap(contexts));
+        return methodContextCache.get(t);
     }
 
     /**
      * If the method does not have @Bind or @BindKey it is assumed to be a call without script bindings
+     *
      * @param method the function to check on
      * @return true if the method is considered not to have any bindings needed
      */
     private boolean isRawMethod(Method method) {
         return (method.getParameterTypes().length == 0)
                 || (method.getParameterTypes()[0] == List.class);
-    }
-
-    private static class FinalizeFilter implements CallbackFilter {
-        @Override
-        public int accept(Method method) {
-            if (method.getName().equals("finalize") &&
-                    method.getParameterTypes().length == 0 &&
-                    method.getReturnType() == Void.TYPE) {
-                return 0; //the NO_OP method interceptor
-            }
-            return 1; //the everything else method interceptor
-        }
     }
 }
